fixed up members page and some spacing issues

--- a/_sass/materialize/components/_cards.scss
+++ b/_sass/materialize/components/_cards.scss
@@ -21,7 +21,7 @@
 
   .card-title {
     font-size: 24px;
-    font-weight: 300;
+    font-weight: 500;
     &.activator {
       cursor: pointer;
     }
@@ -133,8 +133,8 @@
     .card-title {
       color: $card-bg-color;
       position: absolute;
-      bottom: 0;
-      left: 0;
+      bottom: 3%;
+      left: 10%;
       max-width: 100%;
       padding: $card-padding;
     }
